# fastapi-example

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  format.sh  pyproject.toml  setup_ap.sh  setup_ut.sh  teardown_ut.sh
.direnv/python-3.10.3/: pyvenv.cfg
.trunk/: trunk.yaml
app/: gunicorn.conf.py  init.py  main.py  requirements-test.txt  requirements.txt
app/api/: admin_api.py  public_api.py  user_api.py
app/controller/: base_controller.py  leave_msg_controller.py  login_controller.py  read_msgs_controller.py
app/model/: msg_model.py
app/tests/: conftest.py  test_init.py
app/tests/api/: test_admin_api.py  test_public_api.py  test_user_api.py
app/util/: auth_util.py  config_util.py  enum_util.py  fastapi_util.py  http_error_util.py  log_util.py  metrics_util.py
docker-compose/: ap.yml  ut.yml
fastapi_example/: alembic.ini  crud.py  gunicorn.conf.py  main.py  model.py
fastapi_example/api/: admin_api.py  user_api.py
fastapi_example/controller/: base_controller.py  leave_msg_controller.py  login_controller.py  read_msgs_controller.py
fastapi_example/migrations/: env.py
fastapi_example/migrations/versions/: 43b86e58d8eb_add_messages_table.py
fastapi_example/model/: msg_model.py
fastapi_example/tests/: conftest.py
fastapi_example/tests/api/: test_user_api.py
fastapi_example/util/: config_util.py  fastapi_util.py  sqlalchemy_util.py
