[project]
name = "app"
authors = [
    {name = "Seth Wang", email = "pkyosx@gmail.com"},
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"
version = "1.0"
description = "A sample fastapi web app"
dependencies = [
    "gunicorn==20.0.4",
    "uvicorn==0.14.0",
    "fastapi==0.68.0",
    "requests==2.24.0",
    "PyJWT==2.2.0",
    "prometheus_client==0.14.0",
]

[project.optional-dependencies]
test = [
    "pytest==6.2.5",
    "pytest-cov==3.0.0",
    "pytest-mock==3.6.1",
    "believe==1.0.10",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.isort]
profile = "black"
py_version=310
src_paths = ["app"]
force_single_line = true