[tool.poetry]
name = "fastapi-example"
version = "1.0"
description = "A sample fastapi web app"
authors = ["Seth Wang <pkyosx@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
uvicorn = "^0.17.6"
fastapi = "^0.75.2"
requests = "^2.27.1"
PyJWT = "^2.3.0"
prometheus-client = "^0.14.1"
sqlalchemy = "^2.0.22"
psycopg2 = "^2.9.9"
alembic = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = {version = "^7.1.1", extras = ["test"]}
pytest-cov = {version = "^3.0.0", extras = ["test"]}
pytest-mock = {version = "^3.7.0", extras = ["test"]}
believe = {version = "^1.0.12", extras = ["test"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
py_version=310
src_paths = ["fastapi_example"]
force_single_line = true

[tool.flake8]
extend-ignore = ["E501"]

[tool.black]
skip-string-normalization = true
target-version = ['py310']